// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectsOverview when passed project correctly renders 1`] = `
<div>
  <Component
    text="Projects"
  />
  <Component
    projects="list-of-projects"
  />
</div>
`;

exports[`ProjectsOverview with error renders with error bar 1`] = `
<Component
  detail="an error"
  message="Could not find projects"
/>
`;

exports[`ProjectsOverview with project and error renders with error bar 1`] = `
<Component
  detail="an error"
  message="Could not find projects"
/>
`;

exports[`ProjectsOverview without project renders with error bar 1`] = `
<Component
  message="Could not find projects"
/>
`;
